--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="quiz">
-        <p>1. რა პროგრამულ ენას ვიყენებთ ვებ გვერდის ვიზაულიზე მუშაობისას?</p>
+        <p>1. რა პროგრამულ ენას ვიყენებთ ვებ გვერდის ვიზუალზე მუშაობისას?</p>
         <input type="radio" id="answer" name="first" value="false">
         <label for="html">HTML</label><br>
 
